packages/zenith-mcp/tests/fixtures/polaris-workspace/typescript/parse-error/broken.ts
export function brokenPrefix(): number {
    return 1;
}

export function ((((
